--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DoItDoWith</string>
+    <string name="kakao_app_key">b42ebdd04361e9c02dc316874140edaf</string>
 </resources>
